--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# --- Python & Virtual Environment ---
+venv/
 .venv/
-data/        
 __pycache__/
+*.pyc
+*.pyo
+
+# --- Dataset & Generated Files ---
+data/
+features/
+
+# --- Model & Large Files ---
+*.pt
+*.pkl
+*.png
+*.npy
+
+# --- System & IDE Files ---
+.DS_Store
+.vscode/
+.idea/
+
+# --- Logs & Caches ---
+*.log
+*.tmp
